# internal/dto/error_response.go
@@ -1,0 +1,7 @@
+package dto
+
+type ErrorResponse struct {
+	Status  string `json:"Status" example:"Error"`
+	Message string `json:"Message" example:"Success"`
+	Error   string `json:"Error"`
+}
